--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,12 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
   <url-pattern>/*</url-pattern>
 </filter-mapping>
 
+
+    <resource-ref>
+        <description>My DataSource Reference</description>
+        <res-ref-name>jdbc/bookstoredb</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
 </web-app>
